docs: add TESTING.md and update CHANGELOG with Pydantic v2 and CI fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     env:
+      PYTHONPATH: .
       DB_ENGINE: django.db.backends.postgresql
       DB_NAME: a3cp
       DB_USER: a3cp_admin
