--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,4 @@ typing-inspection==0.4.1
 typing_extensions==4.13.2
 uvicorn==0.34.3
 psycopg[binary]==3.1.18
-pytest==8.2.1
+pytest==8.2.1httpx==0.28.1
