Add script/manage.sh, FastAPI smoke test, /api/ Nginx config, defer feedback latency test

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,9 @@ INFER_API_URL=http://127.0.0.1:9000/api/infer/
 # Cloud storage (optional later)
 CLOUD_STORAGE_KEY=your-cloud-key
 CLOUD_STORAGE_SECRET=your-cloud-secret
+
+# ------------------------------------------------------------------
+# A3CP Server Port Configuration
+# ------------------------------------------------------------------
+GUNICORN_PORT=8000     # Port for Django/Gunicorn (WSGI)
+UVICORN_PORT=8001      # Port for FastAPI/Uvicorn (ASGI)    # Dev default; override in real .env (e.g., 9000 for prod)
