chore: update .env.example and deploy.yml for improved VPS deployment
- Added GUNICORN_PORT and UVICORN_PORT to .env.example
- Refined deploy.yml to support auto-deployment to Hetzner via GitHub Actions

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,5 @@ CLOUD_STORAGE_SECRET=your-cloud-secret
 # A3CP Server Port Configuration
 # ------------------------------------------------------------------
 GUNICORN_PORT=8000     # Port for Django/Gunicorn (WSGI)
-UVICORN_PORT=8001      # Port for FastAPI/Uvicorn (ASGI)    # Dev default; override in real .env (e.g., 9000 for prod)
+UVICORN_PORT=8001      # Port for FastAPI/Uvicorn (ASGI)    # Dev default; override in real .env (e.g., 9000 for prod)GUNICORN_PORT=8000
+UVICORN_PORT=8001
