--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,8 @@ jobs:
           port: 22
           script: |
             cd /opt/a3cp-app
-            git pull origin main
+            git fetch origin
+            git reset --hard origin/main
             source /opt/a3cp-env/bin/activate
             pip install -r requirements.txt
             python manage.py migrate --settings=config.settings.prod
