feat(env): add check_env.py, Makefile target, and CI integration

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,48 @@
+# ========================
 # Django settings
+# ========================
+
 DEBUG=False
 SECRET_KEY=changeme-in-prod
 ALLOWED_HOSTS=gesturelabs.org,www.gesturelabs.org
+DJANGO_SETTINGS_MODULE=config.settings.prod
+PYTHONUNBUFFERED=1
 
-# Database settings (if using PostgreSQL later)
+# ========================
+# PostgreSQL settings
+# ========================
+
+DB_ENGINE=django.db.backends.postgresql
 DB_NAME=a3cp
 DB_USER=a3cp_user
 DB_PASSWORD=changeme
 DB_HOST=localhost
 DB_PORT=5432
 
-# FastAPI settings (to be used later)
-INFER_API_URL=http://127.0.0.1:9000/api/infer/
+# ========================
+# FastAPI inference service
+# ========================
 
-# Cloud storage (optional later)
+INFER_API_URL=http://127.0.0.1:9000/api/infer/
+FASTAPI_HOST=127.0.0.1
+UVICORN_PORT=9001
+
+# ========================
+# Cloud storage (optional)
+# ========================
+
 CLOUD_STORAGE_KEY=your-cloud-key
 CLOUD_STORAGE_SECRET=your-cloud-secret
+
+# ========================
+# Logging and static files
+# ========================
+
+LOG_LEVEL=info
+STATIC_ROOT=/opt/a3cp-app/staticfiles
 
 # ------------------------------------------------------------------
 # A3CP Server Port Configuration
 # ------------------------------------------------------------------
 GUNICORN_PORT=8000     # Port for Django/Gunicorn (WSGI)
-UVICORN_PORT=8001      # Port for FastAPI/Uvicorn (ASGI)    # Dev default; override in real .env (e.g., 9000 for prod)GUNICORN_PORT=8000
-UVICORN_PORT=8001
+UVICORN_PORT=8001      # Port for FastAPI/Uvicorn (ASGI)    # Dev default; override in real .env 
