--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,5 +20,10 @@ jobs:
           pip install pre-commit
           pre-commit install
 
+      - name: Run environment variable check
+        run: |
+          pip install python-dotenv
+          python scripts/check_env.py
+          
       - name: Run pre-commit checks
         run: pre-commit run --all-files
