--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt requirements-dev.txt
+          pip install -r requirements.txt -r requirements-dev.txt
 
       - name: Print environment for debugging
         run: env | sort
