Add CI step to validate .env vars using validate_env.py - Renamed scripts/check_env.py → scripts/validate_env.py for clarity - Added environment validation step to ci.yml after dependency installation - CI will now fail early if required .env variables are missing or malformed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt -r requirements-dev.txt
 
+      - name: Validate environment variables
+        run: |
+          python scripts/validate_env.py
+          
       - name: Print environment for debugging
         run: env | sort
 
