--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,3 +1,5 @@
 {
-  "typeCheckingMode": "basic"
+  "typeCheckingMode": "basic",
+  "reportMissingImports": true,
+  "reportMissingTypeStubs": false
 }
