--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,12 @@
 repos:
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
+    hooks:
+      - id: isort
+        name: isort (python import sorter)
+        language_version: python3
+        args: ["--profile", "black"]
+
   - repo: https://github.com/psf/black
     rev: 24.4.2
     hooks:
@@ -9,14 +17,9 @@ repos:
     rev: v0.4.1
     hooks:
       - id: ruff
-        args: ["--fix"]  # auto-fix simple issues
-
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
-    hooks:
-      - id: isort
-        name: isort (python import sorter)
-        language_version: python3
+        args: ["--fix"]
+        # Optional: limit to linting only to avoid conflicts
+        # args: ["--fix", "--unsafe-fixes", "--ignore", "I001"]  # skip import sort enforcement
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
