Test infra and audio feed test working; updated routes, CI config, and architecture docs

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -3,7 +3,10 @@
   "reportMissingImports": true,
   "reportMissingTypeStubs": false,
   "include": [
-    "."
+    "api",
+    "tests",
+    "schemas",
+    "interfaces"
   ],
   "extraPaths": [
     "."
