--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ idna==3.10
 iniconfig==2.1.0
 outcome==1.3.0.post0
 packaging==25.0
+Pillow==11.3.0
 pluggy==1.6.0
 psycopg[binary]==3.1.18
 pydantic==2.11.5
