--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles>=23.1.0
 annotated-types==0.7.0
 anyio==4.9.0
 asgi-lifespan==2.1.0
@@ -13,6 +14,7 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
+jinja2>=3.1.2
 outcome==1.3.0.post0
 packaging==25.0
 Pillow==11.3.0
@@ -22,6 +24,7 @@ pydantic==2.11.5
 pydantic_core==2.33.2
 pydantic-settings==2.9.1
 python-dotenv==1.1.0
+python-multipart>=0.0.6
 sniffio==1.3.1
 sortedcontainers==2.4.0
 sqlparse==0.5.3
