--- a/requirements.txt
+++ b/requirements.txt
@@ -37,8 +37,7 @@ pathspec==0.12.1
 pillow==11.3.0
 platformdirs==4.3.8
 pluggy==1.6.0
-psycopg==3.1.18
-psycopg-binary==3.1.18
+psycopg[binary]==3.2.12
 pydantic==2.11.5
 pydantic-extra-types==2.10.5
 pydantic-settings==2.9.1
