CI: use APP_SECRET_KEY instead of Django secrets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
       DB_HOST: 127.0.0.1
       DB_PORT: 5432
       DEBUG: "False"
+      APP_SECRET_KEY: ${{ secrets.APP_SECRET_KEY }}
 
 
     services:
