--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "homepage": "https://github.com/gesturelabs/a3cp#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "eslint": "^10.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tailwindcss-cli": "^0.1.2"
-  }
+  },
+  "type": "commonjs"
 }
